k8s/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: modelpad
  labels:
    app: modelpad
spec:
  replicas: 2
  selector:
    matchLabels:
      app: modelpad
  serviceName: modelpad
  template:
    metadata:
      labels:
        app: modelpad
    spec:
      containers:
        - name: modelpad
          image: <IMAGE>
          volumeMounts:
            - mountPath: "/data"
              name: modelpad-nest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "0"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
              httpHeaders:
            initialDelaySeconds: 3
            periodSeconds: 3
  volumeClaimTemplates:
    - metadata:
        name: modelpad-nest
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: do-block-storage
